--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
+  "name": "fem",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "Inventory Management MERN Application",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.7"
