--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "mern",
+  "name": "fem",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "@material-ui/core": "^4.9.10",
+    "bootstrap": "^4.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-transition-group": "^4.3.0",
+    "reactstrap": "^8.4.1",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
