--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "bootstrap": "^4.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1",
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "uuid": "^7.0.3"
   },
   "scripts": {
