--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,7 @@
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^7.0.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
