everything working properly, time to upscale

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fem",
+  "name": "nos",
   "version": "1.0.0",
   "description": "Inventory Management MERN Application",
   "main": "server.js",
