--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "fem",
+  "name": "nos",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -13,7 +14,8 @@
     "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
