--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.7"
